# FinBench

./: .env.example  .gitignore  API_REFERENCE.md  PROJECT_ARCHITECTURE.md  README.md  RUNNING.md  app.js  app.py  baseline.py  debug_output.txt  index.html  inference.py  openenv-fintech-design.md  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  start-frontend.ps1  style.css  test_output.txt  todos.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
openenv_fintech/: __init__.py  env.py  scoring.py
openenv_fintech/data/: __init__.py  generators.py  seeds.py
openenv_fintech/graders/: __init__.py  base.py  llm_judge.py  rule_based.py
openenv_fintech/models/: __init__.py  actions.py  observations.py  results.py
openenv_fintech/tasks/: __init__.py  base.py  fraud_detection.py  loan_underwriting.py  portfolio_rebalancing.py
server/: app.py
tests/: test_api.py  test_env.py  test_graders.py  test_inference.py  test_models.py  test_reproducibility.py
